--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "root",
+  "name": "@vikthortt/special-octo-dollop",
   "private": true,
   "devDependencies": {
     "lerna": "^4.0.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
