--- a/packages/substract/package.json
+++ b/packages/substract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "substract",
+  "name": "@vikthortt/substract",
   "version": "0.1.1",
   "description": "substract two numbers",
   "main": "lib/index.js",
