--- a/packages/sum/package.json
+++ b/packages/sum/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "types.d.ts",
   "scripts": {
-    "prepublish": "build",
+    "prepublish": "npm run build",
     "build": "rollup --config",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,5 +27,6 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@vikthortt"
-  }
+  },
+  "gitHead": "b7fe3ffc046fd853ef081d0d4ebb9fb00acaf370"
 }
